--- a/deploy/service.yaml
+++ b/deploy/service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: init-sw-svc
+  name: init-sw-agent-svc
   labels:
-    app: init-sw-svc
+    app: init-sw-agent-svc
 spec:
   ports:
   - port: 1443
