增加支持statefulset资源

--- a/deploy/mutatewebhook.yaml
+++ b/deploy/mutatewebhook.yaml
@@ -18,7 +18,7 @@ webhooks:
       - operations: [ "CREATE","UPDATE"]
         apiGroups: ["apps", ""]
         apiVersions: ["v1"]
-        resources: ["deployments"]
+        resources: ["deployments","statefulsets"]
     namespaceSelector:
       matchLabels:
         init-sw: enabled
